--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
     "mysql2": "^3.2.0",
     "sequelize": "^6.30.0",
     "session": "^0.1.0"
-  }
+  },
+  "scripts": {
+    "start": "node server.js",
+    "seed": "node seeds/index.js"
+    }
 }
